Add tampilan select map, story, dan Fix menu